# claude-code-token-slim-mcp

./: .gitignore  Cargo.toml  README.md
skills/bulk/: SKILL.md
skills/slim/: SKILL.md  ts.sh
src/: main.rs  slim.rs  tokens.rs  tools.rs
tests/: mcp.rs
